tests/fixtures/invalid/pow_list_none_str.py
# Cannot call pow() with List[int], None, Str
x = pow([1, 2, 3], None, "hello")
